--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
           <a href="community.html" class="nav-menu-link">
             <h3 class="nav-menu-text">COMMUNITY</h3>
           </a>
+          <a href="greatones.html" class="nav-menu-link">
+            <h3 class="nav-menu-text">GREATONES</h3>
+          </a>
         </div>
         <div class="nav-sns">
           <div class="nav-ico-box">
