--- a/community.html
+++ b/community.html
@@ -1,205 +1,273 @@
 <!DOCTYPE html>
 <html lang="ko">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>COMMUNITY</title>
-        <link rel="shortcut icon" href="./src/favicon.png" type="image/x-icon" />
-        <script src="https://kit.fontawesome.com/2c827c8cca.js" crossorigin="anonymous"></script> 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="/css/style.css" type="text/css" />
-        <link rel="stylesheet" href="/css/community.css" type="text/css" />
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>COMMUNITY</title>
+    <link rel="shortcut icon" href="./src/favicon.png" type="image/x-icon" />
+    <script
+      src="https://kit.fontawesome.com/2c827c8cca.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="/css/community.css" type="text/css" />
+  </head>
 
-    <body>
-        <nav class="nav">
-        <div class="nav-style">
-            <div class="nav-logo">
-                <a href="/">
-                    <img src="./src/logo-black-withCoffee.png" style="height: 65px" />
-                </a>
+  <body>
+    <nav class="nav">
+      <div class="nav-style">
+        <div class="nav-logo">
+          <a href="/">
+            <img src="./src/logo-black-withCoffee.png" style="height: 65px" />
+          </a>
+        </div>
+        <div class="nav-logo-mediaQuery">
+          <a href="/">
+            <img
+              src="./src/logo-white.png"
+              style="height: 55px; margin: 5px 0"
+            />
+          </a>
+        </div>
+        <div class="nav-menu">
+          <a href="about.html" class="nav-menu-link">
+            <h3 class="nav-menu-text">ABOUT</h3>
+          </a>
+          <a href="menu.html" class="nav-menu-link">
+            <h3 class="nav-menu-text">MENU</h3>
+          </a>
+          <a href="community.html" class="nav-menu-link">
+            <h3 class="nav-menu-text">COMMUNITY</h3>
+          </a>
+          <a href="greatones.html" class="nav-menu-link">
+            <h3 class="nav-menu-text">GREATONES</h3>
+          </a>
+        </div>
+        <div class="nav-sns">
+          <div class="nav-ico-box">
+            <i class="fa-brands fa-instagram fa-xl" style="color: #ffffff"></i>
+          </div>
+          <div class="nav-ico-box">
+            <i class="fa-brands fa-twitter" style="color: #ffffff"></i>
+          </div>
+          <div class="nav-ico-box">
+            <i class="fa-brands fa-facebook" style="color: #ffffff"></i>
+          </div>
+        </div>
+
+        <!-- 테블릿, 모바일용 nav 오프캔버스 -->
+        <div class="nav-offcanvas">
+          <button
+            class="btn btn-primary"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasTop"
+            aria-controls="offcanvasTop"
+          >
+            <i class="fa-solid fa-bars" style="color: #ffffff"></i>
+          </button>
+          <div
+            class="offcanvas offcanvas-top"
+            tabindex="-1"
+            id="offcanvasTop"
+            aria-labelledby="offcanvasTopLabel"
+          >
+            <div class="offcanvas-header">
+              <h4 class="offcanvas-header-text" id="offcanvasTopLabel">
+                CATEGORY
+              </h4>
+              <button
+                type="button"
+                class="btn-close text-reset"
+                data-bs-dismiss="offcanvas"
+                aria-label="Close"
+              ></button>
             </div>
-            <div class="nav-logo-mediaQuery">
-                <a href="/">
-                    <img src="./src/logo-white.png" style="height: 55px; margin: 5px 0;">
-                </a>
-            </div>
-            <div class="nav-menu">
+            <div class="offcanvas-body">
+              <div class="nav-offcanvas-container">
                 <a href="about.html" class="nav-menu-link">
-                    <h3 class="nav-menu-text">ABOUT</h3>
+                  <p class="nav-offcanvas-menu">ABOUT</p>
                 </a>
                 <a href="menu.html" class="nav-menu-link">
-                    <h3 class="nav-menu-text">MENU</h3>
+                  <p class="nav-offcanvas-menu">MENU</p>
                 </a>
                 <a href="community.html" class="nav-menu-link">
-                    <h3 class="nav-menu-text">COMMUNITY</h3>
-                </a>  
+                  <p class="nav-offcanvas-menu">COMMUNITY</p>
+                </a>
+              </div>
             </div>
-            <div class="nav-sns">
-                <div class="nav-ico-box">
-                    <i class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i>
-                </div>
-                <div class="nav-ico-box">
-                    <i class="fa-brands fa-twitter" style="color: #ffffff;"></i>
-                </div>
-                <div class="nav-ico-box">
-                    <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
-                </div>
-            </div>
-
-            <!-- 테블릿, 모바일용 nav 오프캔버스 -->
-            <div class="nav-offcanvas">
-                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop" aria-controls="offcanvasTop"><i class="fa-solid fa-bars" style="color: #ffffff;"></i></button>
-                    <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop" aria-labelledby="offcanvasTopLabel">
-                    <div class="offcanvas-header">
-                        <h4 class="offcanvas-header-text" id="offcanvasTopLabel">CATEGORY</h4>
-                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                    </div>
-                    <div class="offcanvas-body">
-                        <div class="nav-offcanvas-container">
-                            <a href="about.html" class="nav-menu-link">
-                                <p class="nav-offcanvas-menu">ABOUT</p>
-                            </a>
-                            <a href="menu.html" class="nav-menu-link">
-                                <p class="nav-offcanvas-menu">MENU</p>
-                            </a>
-                            <a href="community.html" class="nav-menu-link">
-                                <p class="nav-offcanvas-menu">COMMUNITY</p>
-                            </a>          
-                            </div>
-                        </div>
-                    </div>
-            </div>
+          </div>
         </div>
-        </nav>
+      </div>
+    </nav>
 
-        <!-- 바디 메인 동작 -->
-        <div class="community-whole-container">
-            <div class="community-first-container">
-                <div class="community-first-titles">
-                    <div>
-                        <h1 class="community-first-title-firstline">COMMUNITY</h1>
-                    </div>
-                    <div>
-                        <p class="community-first-title-secondline">THINK OF THE CUSTOMER FIRST</p>
-                    </div>
-                </div>
-                <div class="community-first-category">
-                    <div class="community-first-category-text">
-                        <p class="community-first-category-text-style">NOTICE</p>
-                        <p class="community-first-category-text-style">NEWS</p>
-                        <p class="community-first-category-text-style">제휴 및 문의</p>
-                    </div>
-                </div>
-            </div>
-            <div class="community-container-wrap">
-                <div>
-                    <h1 style="font-size: 7vh; margin: 9vh 0 4vh 0;">Contact <b style="color: #5da0d8;">Us</b></h1>
-                    <h4 style="color: #00000080;">눈나커피 제휴 및 문의</h4>
-                </div>
-                <div>
-                    <table class="table community-table">
-                        <tbody>
-                            <tr>
-                                <th style="background-color: #5da0d8; color: white;" scope="row">문의유형</th>
-                                <td>
-                                    <input type="radio" name="first-radio" checked> 제휴
-                                    <input type="radio" name="first-radio"> 문의
-                                </td>
-                            </tr>
-                            <tr>
-                                <th style="background-color: #5da0d8; color: white;" scope="row">성함</th>
-                                <td>
-                                    <input type="text" placeholder="성함을 입력해주세요.">
-                                </td>
-                            </tr>
-                            <tr>
-                                <th style="background-color: #5da0d8; color: white;" scope="row">이메일</th>
-                                <td>
-                                    <input type="text" placeholder="이메일을 입력해주세요.">
-                                </td>
-                            </tr>
-                            <tr>
-                                <th style="background-color: #5da0d8; color: white;" scope="row">연락처</th>
-                                <td>
-                                    <input type="text" class="input-num"> - <input type="text" class="input-num"> - <input type="text" class="input-num">
-                                </td>
-                            </tr>
-                            <tr>
-                                <th style="background-color: #5da0d8; color: white;" scope="row">회신방법</th>
-                                <td>
-                                    <input type="radio" name="second-radio" checked> 유선연락
-                                    <input type="radio" name="second-radio"> 이메일
-                                </td>
-                            </tr>
-                            <tr>
-                                <th style="background-color: #5da0d8; color: white;" scope="row">내용</th>
-                                <td>
-                                    <input type="textarea" class="input-contents">
-                                </td>
-                            </tr>
-                            <tr>
-                                <th style="background-color: #5da0d8; color: white;" scope="row">비밀번호</th>
-                                <td>
-                                    <input type="password" placeholder="비밀번호">
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="personal-agree">
-                    <input type="checkbox"> 개인정보취급방침 약관 내용에 동의합니다. <button style="background-color: #5da0d8; color: white; border: none; padding: 6px; font-size: small;">약관보기</button>
-                </div>
-                <div>
-                    <button class="enter-btn">문의사항 등록하기</button>
-                </div>
-            </div>
+    <!-- 바디 메인 동작 -->
+    <div class="community-whole-container">
+      <div class="community-first-container">
+        <div class="community-first-titles">
+          <div>
+            <h1 class="community-first-title-firstline">COMMUNITY</h1>
+          </div>
+          <div>
+            <p class="community-first-title-secondline">
+              THINK OF THE CUSTOMER FIRST
+            </p>
+          </div>
         </div>
+        <div class="community-first-category">
+          <div class="community-first-category-text">
+            <p class="community-first-category-text-style">NOTICE</p>
+            <p class="community-first-category-text-style">NEWS</p>
+            <p class="community-first-category-text-style">제휴 및 문의</p>
+          </div>
+        </div>
+      </div>
+      <div class="community-container-wrap">
+        <div>
+          <h1 style="font-size: 7vh; margin: 9vh 0 4vh 0">
+            Contact <b style="color: #5da0d8">Us</b>
+          </h1>
+          <h4 style="color: #00000080">눈나커피 제휴 및 문의</h4>
+        </div>
+        <div>
+          <table class="table community-table">
+            <tbody>
+              <tr>
+                <th style="background-color: #5da0d8; color: white" scope="row">
+                  문의유형
+                </th>
+                <td>
+                  <input type="radio" name="first-radio" checked /> 제휴
+                  <input type="radio" name="first-radio" /> 문의
+                </td>
+              </tr>
+              <tr>
+                <th style="background-color: #5da0d8; color: white" scope="row">
+                  성함
+                </th>
+                <td>
+                  <input type="text" placeholder="성함을 입력해주세요." />
+                </td>
+              </tr>
+              <tr>
+                <th style="background-color: #5da0d8; color: white" scope="row">
+                  이메일
+                </th>
+                <td>
+                  <input type="text" placeholder="이메일을 입력해주세요." />
+                </td>
+              </tr>
+              <tr>
+                <th style="background-color: #5da0d8; color: white" scope="row">
+                  연락처
+                </th>
+                <td>
+                  <input type="text" class="input-num" /> -
+                  <input type="text" class="input-num" /> -
+                  <input type="text" class="input-num" />
+                </td>
+              </tr>
+              <tr>
+                <th style="background-color: #5da0d8; color: white" scope="row">
+                  회신방법
+                </th>
+                <td>
+                  <input type="radio" name="second-radio" checked /> 유선연락
+                  <input type="radio" name="second-radio" /> 이메일
+                </td>
+              </tr>
+              <tr>
+                <th style="background-color: #5da0d8; color: white" scope="row">
+                  내용
+                </th>
+                <td>
+                  <input type="textarea" class="input-contents" />
+                </td>
+              </tr>
+              <tr>
+                <th style="background-color: #5da0d8; color: white" scope="row">
+                  비밀번호
+                </th>
+                <td>
+                  <input type="password" placeholder="비밀번호" />
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="personal-agree">
+          <input type="checkbox" /> 개인정보취급방침 약관 내용에 동의합니다.
+          <button
+            style="
+              background-color: #5da0d8;
+              color: white;
+              border: none;
+              padding: 6px;
+              font-size: small;
+            "
+          >
+            약관보기
+          </button>
+        </div>
+        <div>
+          <button class="enter-btn">문의사항 등록하기</button>
+        </div>
+      </div>
+    </div>
 
+    <footer class="footer-container">
+      <div class="footer-items">
+        <div class="footer-menu-container">
+          <p class="footer-menu">사이트 이용약관</p>
+          <p class="footer-menu">개인정보취급방침</p>
+          <p class="footer-menu">이메일무단수집거부</p>
+          <p class="footer-menu">찾아오시는 길</p>
+        </div>
+        <div class="footer-secondline-container">
+          <img
+            src="./src/logo-white.png"
+            style="height: 55px; width: fit-content"
+          />
+          <div class="footer-secondline-location">
+            <p style="margin-bottom: 5px">
+              하이오커피 서울센터 | 서울특별시 금천구 가산디지털2로 101
+              코알누타워 A동
+            </p>
+            <p style="margin-bottom: 5px">
+              하이오커피 부산센터 | 부산광역시 해운대구 센텀1로 코알누타워 E동
+              301호
+            </p>
+            <p>
+              하이오커피 광주센터 | 광주광역시 광산구 첨단강변로 93 코알누드림
+              101호
+            </p>
+          </div>
+        </div>
+        <div class="footer-info-container">
+          <p class="footer-info">회사명 : (주)코알누</p>
+          <p class="footer-info">TEL : 1345-7890</p>
+          <p class="footer-info footer-info-none">FAX : 02-4456-8897</p>
+          <p class="footer-info footer-info-none">E-mail : koRnu@google.com</p>
+        </div>
+        <div class="footer-copyright">
+          <p>Copyright (C) coRnu Coffee. All Right Reserced.</p>
+        </div>
+        <div class="footer-media-logo-container">
+          <img
+            class="footer-media-logo"
+            src="src/logo-media-bottom.png"
+            style="height: 20vh; width: 23vw"
+          />
+        </div>
+      </div>
+    </footer>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <footer class="footer-container">
-            <div class="footer-items">
-            <div class="footer-menu-container">
-                <p class="footer-menu">사이트 이용약관</p>
-                <p class="footer-menu">개인정보취급방침</p>
-                <p class="footer-menu">이메일무단수집거부</p>
-                <p class="footer-menu">찾아오시는 길</p>
-            </div>
-            <div class="footer-secondline-container">
-                <img src="./src/logo-white.png" style="height: 55px; width: fit-content;"/>
-                <div class="footer-secondline-location">
-                <p style="margin-bottom: 5px;">하이오커피 서울센터 | 서울특별시 금천구 가산디지털2로 101 코알누타워 A동</p>
-                <p style="margin-bottom: 5px;">하이오커피 부산센터 | 부산광역시 해운대구 센텀1로 코알누타워 E동 301호</p>
-                <p>하이오커피 광주센터 | 광주광역시 광산구 첨단강변로 93 코알누드림 101호</p>
-                </div>
-            </div>
-            <div class="footer-info-container">
-                <p class="footer-info">회사명 : (주)코알누</p>
-                <p class="footer-info">TEL : 1345-7890</p>
-                <p class="footer-info footer-info-none">FAX : 02-4456-8897</p>
-                <p class="footer-info footer-info-none">E-mail : koRnu@google.com</p>
-            </div>
-            <div class="footer-copyright">
-                <p>Copyright (C) coRnu Coffee. All Right Reserced.</p>
-            </div>
-            <div class="footer-media-logo-container">
-            <img class="footer-media-logo" src="src/logo-media-bottom.png" style="height: 20vh; width: 23vw;">
-            </div>
-        </footer>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
