--- a/greatones.html
+++ b/greatones.html
@@ -3,22 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ABOUT</title>
+    <title>GREATONES</title>
     <link rel="shortcut icon" href="./src/favicon.png" type="image/x-icon" />
-    <script
-      src="https://kit.fontawesome.com/2c827c8cca.js"
-      crossorigin="anonymous"
-    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.css"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/style.css" type="text/css" />
-    <link rel="stylesheet" href="/css/about.css" type="text/css" />
+    <script
+      src="https://kit.fontawesome.com/2c827c8cca.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="/css/reset.css" type="text/css" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="css/greatones.css" />
   </head>
-
   <body>
     <nav class="nav">
       <div class="nav-style">
@@ -61,7 +65,7 @@
           </div>
         </div>
 
-        <!-- 테블릿, 모바일용 nav 오프캔버스 -->
+        <!-- 테블릿, 모바일용 nav 오프캔버스-->
         <div class="nav-offcanvas">
           <button
             class="btn btn-primary"
@@ -107,80 +111,87 @@
       </div>
     </nav>
 
-    <!-- 바디 메인 동작 -->
-    <div class="about-whole-container">
-      <div class="about-first-container">
-        <div class="about-first-titles">
-          <div>
-            <h1 class="about-first-title-firstline">BRAND</h1>
-          </div>
-          <div>
-            <p class="about-first-title-secondline">
-              A REASONABLE PRICE, A HIGH-QUALITY COFFEE
-            </p>
+    <div class="greatones-container">
+      <h1>직원 소개</h1>
+      <div class="greatones-members">
+        <div class="greatones">
+          <img src="src/bonobono.jpg" alt="오너" />
+          <h2>정주연</h2>
+          <div class="greatones-text-box">
+            <p>직위: Project Owner</p>
+            <p>취미: 코딩알려주는 누나 유투브 감상</p>
+            <div class="greatones-introduce">
+              <p>소개:</p>
+              <p>
+                나보다 더 바보는 본적이 없다. 밥은 먹고 다니냐? 왜 굳이 의미를
+                찾으려 하는가?<br />인생은 욕망이지, 의미가 아니다. 가는 곳마다
+                나보다 한 발 먼저 다녀간 시인이 있음을 발견한다.
+              </p>
+            </div>
           </div>
         </div>
-        <div class="about-first-category">
-          <div class="about-first-category-text">
-            <p class="about-first-category-text-style">ABOUT US</p>
-            <p class="about-first-category-text-style">인테리어</p>
-            <p class="about-first-category-text-style">오시는 길</p>
+        <div class="greatones">
+          <img src="src/bonobono.jpg" alt="오너" />
+          <h2>장해명</h2>
+          <div class="greatones-text-box">
+            <p>직위: Project Owner</p>
+            <p>취미: 코딩알려주는 누나 유투브 감상</p>
+            <div class="greatones-introduce">
+              <p>소개:</p>
+              <p>
+                나보다 더 바보는 본적이 없다. 밥은 먹고 다니냐? 왜 굳이 의미를
+                찾으려 하는가?<br />인생은 욕망이지, 의미가 아니다. 가는 곳마다
+                나보다 한 발 먼저 다녀간 시인이 있음을 발견한다.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-
-      <div class="about-second-container">
-        <div class="about-second-titles">
-          <h4 style="font-size: 40px; margin-bottom: 15px">
-            프로들이 만드는 <b style="color: #5da0d8">프로다운 커피</b>
-          </h4>
-          <p style="color: #2727276e">
-            엄선된 품질 좋은 원두를 곱게 갈아 특별한 당신에게 새로운 가치와
-            따뜻한 여유를 선사합니다.
-          </p>
-        </div>
-        <div class="about-second-li">
-          <li>
-            <img
-              src="https://hiocoffee.com/sub/img/brandico02.png"
-              style="height: 18vh; margin-bottom: 30px"
-            />
-            <p style="margin-bottom: 20px; font-size: 20px">Various Attempts</p>
-            "다양한 시도와 디자인으로 가치를 더하는 눈나커피"
-          </li>
-          <li>
-            <img
-              src="https://hiocoffee.com/sub/img/brandico01.png"
-              style="height: 18vh; margin-bottom: 30px"
-            />
-            <p style="margin-bottom: 20px; font-size: 20px">A Relaxed Store</p>
-            "바쁜 일상 속 여유를 만들어줄 커뮤니티 매장"
-          </li>
-          <li>
-            <img
-              src="https://hiocoffee.com/sub/img/ico-val03.png"
-              style="height: 18vh; margin-bottom: 30px"
-            />
-            <p style="margin-bottom: 20px; font-size: 20px">Quality Beans</p>
-            "에티오피아, 인도네시아의 커피농장에서 생산하고 엄선한 품질 좋은
-            원두"
-          </li>
-        </div>
-      </div>
-      <div class="about-third-container-bgimg">
-        <div class="about-third-container">
-          <div class="about-third-container-text">
-            <h3 style="font-size: 40px; margin-bottom: 15px">Simbol Mark</h3>
-            <p style="color: rgba(224, 224, 224, 0.479)">
-              눈나 커피의 넉넉한 용량의 커피를 하늘에서 내려오는 원두로
-              표현하였습니다.
-            </p>
+        <div class="greatones">
+          <img src="src/bonobono.jpg" alt="오너" />
+          <h2>이소영</h2>
+          <div class="greatones-text-box">
+            <p>직위: Project Owner</p>
+            <p>취미: 코딩알려주는 누나 유투브 감상</p>
+            <div class="greatones-introduce">
+              <p>소개:</p>
+              <p>
+                나보다 더 바보는 본적이 없다. 밥은 먹고 다니냐? 왜 굳이 의미를
+                찾으려 하는가?<br />인생은 욕망이지, 의미가 아니다. 가는 곳마다
+                나보다 한 발 먼저 다녀간 시인이 있음을 발견한다.
+              </p>
+            </div>
           </div>
-          <div>
-            <img
-              class="about-third-simbolImg"
-              src="./src/noonNaCoffee-simbolMark.png"
-            />
+        </div>
+        <div class="greatones">
+          <img src="src/bonobono.jpg" alt="오너" />
+          <h2>나정민</h2>
+          <div class="greatones-text-box">
+            <p>직위: Project Owner</p>
+            <p>취미: 코딩알려주는 누나 유투브 감상</p>
+            <div class="greatones-introduce">
+              <p>소개:</p>
+              <p>
+                나보다 더 바보는 본적이 없다. 밥은 먹고 다니냐? 왜 굳이 의미를
+                찾으려 하는가?<br />인생은 욕망이지, 의미가 아니다. 가는 곳마다
+                나보다 한 발 먼저 다녀간 시인이 있음을 발견한다.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="greatones">
+          <img src="src/bonobono.jpg" alt="오너" />
+          <h2>한승완</h2>
+          <div class="greatones-text-box">
+            <p>직위: 알바</p>
+            <p>취미: 밥먹고 되새김질</p>
+            <div class="greatones-introduce">
+              <p>소개:</p>
+              <p>
+                나보다 더 바보는 본적이 없다. 밥은 먹고 다니냐? 왜 굳이 의미를
+                찾으려 하는가?<br />인생은 욕망이지, 의미가 아니다. 가는 곳마다
+                나보다 한 발 먼저 다녀간 시인이 있음을 발견한다.
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -201,15 +212,15 @@
           />
           <div class="footer-secondline-location">
             <p style="margin-bottom: 5px">
-              하이오커피 서울센터 | 서울특별시 금천구 가산디지털2로 101
-              코알누타워 A동
+              눈나커피 서울센터 | 서울특별시 금천구 가산디지털2로 101 코알누타워
+              A동
             </p>
             <p style="margin-bottom: 5px">
-              하이오커피 부산센터 | 부산광역시 해운대구 센텀1로 코알누타워 E동
+              눈나커피 부산센터 | 부산광역시 해운대구 센텀1로 코알누타워 E동
               301호
             </p>
             <p>
-              하이오커피 광주센터 | 광주광역시 광산구 첨단강변로 93 코알누드림
+              눈나커피 광주센터 | 광주광역시 광산구 첨단강변로 93 코알누드림
               101호
             </p>
           </div>
@@ -233,6 +244,12 @@
       </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="js/greatones.js"></script>
   </body>
 </html>
