--- a/greatones.html
+++ b/greatones.html
@@ -104,6 +104,9 @@
                 <a href="community.html" class="nav-menu-link">
                   <p class="nav-offcanvas-menu">COMMUNITY</p>
                 </a>
+                <a href="greatones.html" class="nav-menu-link">
+                  <p class="nav-offcanvas-menu">GREATONES</p>
+                </a>
               </div>
             </div>
           </div>
