--- a/index.html
+++ b/index.html
@@ -30,12 +30,15 @@
       <div class="nav-style">
         <div class="nav-logo">
           <a href="/">
-          <img src="./src/logo-black-withCoffee.png" style="height: 65px" />
+            <img src="./src/logo-black-withCoffee.png" style="height: 65px" />
           </a>
         </div>
         <div class="nav-logo-mediaQuery">
           <a href="/">
-            <img src="./src/logo-white.png" style="height: 55px; margin: 5px 0;">
+            <img
+              src="./src/logo-white.png"
+              style="height: 55px; margin: 5px 0"
+            />
           </a>
         </div>
         <div class="nav-menu">
@@ -102,6 +105,9 @@
                 </a>
                 <a href="community.html" class="nav-menu-link">
                   <p class="nav-offcanvas-menu">COMMUNITY</p>
+                </a>
+                <a href="greatones.html" class="nav-menu-link">
+                  <p class="nav-offcanvas-menu">GREATONES</p>
                 </a>
               </div>
             </div>
@@ -274,21 +280,51 @@
             <a href="#">@NUNNA.COFFEE</a>
           </div>
           <div class="main-bottom-follow-wrapper">
-            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/1.jpg"></a></div>
-            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/2.jpg"></a></div>
-            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/3.png"></a></div>
-            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/4.png"></a></div>
-            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/5.png"></a></div>
-            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/6.jpg"></a></div>
-            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/7.jpg"></a></div>
-            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/8.jpg"></a></div>
-            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/9.jpg"></a></div>
-            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/10.jpg"></a></div>
-            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/11.jpg"></a></div>
-            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/12.jpg"></a></div>
-            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/13.jpg"></a></div>
-            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/14.jpg"></a></div>
-            <div class="main-bottom-follow-box"><a href="#"><img src="src/follow/15.jpg"></a></div>
+            <div class="main-bottom-follow-box">
+              <a href="#"><img src="src/follow/1.jpg" /></a>
+            </div>
+            <div class="main-bottom-follow-box">
+              <a href="#"><img src="src/follow/2.jpg" /></a>
+            </div>
+            <div class="main-bottom-follow-box">
+              <a href="#"><img src="src/follow/3.png" /></a>
+            </div>
+            <div class="main-bottom-follow-box">
+              <a href="#"><img src="src/follow/4.png" /></a>
+            </div>
+            <div class="main-bottom-follow-box">
+              <a href="#"><img src="src/follow/5.png" /></a>
+            </div>
+            <div class="main-bottom-follow-box">
+              <a href="#"><img src="src/follow/6.jpg" /></a>
+            </div>
+            <div class="main-bottom-follow-box">
+              <a href="#"><img src="src/follow/7.jpg" /></a>
+            </div>
+            <div class="main-bottom-follow-box">
+              <a href="#"><img src="src/follow/8.jpg" /></a>
+            </div>
+            <div class="main-bottom-follow-box">
+              <a href="#"><img src="src/follow/9.jpg" /></a>
+            </div>
+            <div class="main-bottom-follow-box">
+              <a href="#"><img src="src/follow/10.jpg" /></a>
+            </div>
+            <div class="main-bottom-follow-box">
+              <a href="#"><img src="src/follow/11.jpg" /></a>
+            </div>
+            <div class="main-bottom-follow-box">
+              <a href="#"><img src="src/follow/12.jpg" /></a>
+            </div>
+            <div class="main-bottom-follow-box">
+              <a href="#"><img src="src/follow/13.jpg" /></a>
+            </div>
+            <div class="main-bottom-follow-box">
+              <a href="#"><img src="src/follow/14.jpg" /></a>
+            </div>
+            <div class="main-bottom-follow-box">
+              <a href="#"><img src="src/follow/15.jpg" /></a>
+            </div>
           </div>
         </div>
       </section>
