--- a/menu-bottom.html
+++ b/menu-bottom.html
@@ -37,15 +37,31 @@
     <nav class="nav">
       <div class="nav-style">
         <div class="nav-logo">
-          <img src="./src/logo-black-withCoffee.png" style="height: 65px" />
+          <a href="/">
+            <img src="./src/logo-black-withCoffee.png" style="height: 65px" />
+          </a>
         </div>
         <div class="nav-logo-mediaQuery">
-          <img src="./src/logo-white.png" style="height: 55px; margin: 5px 0" />
+          <a href="/">
+            <img
+              src="./src/logo-white.png"
+              style="height: 55px; margin: 5px 0"
+            />
+          </a>
         </div>
         <div class="nav-menu">
-          <h3 class="nav-menu-text">ABOUT</h3>
-          <h3 class="nav-menu-text">MENU</h3>
-          <h3 class="nav-menu-text">COMMUNITY</h3>
+          <a href="about.html" class="nav-menu-link">
+            <h3 class="nav-menu-text">ABOUT</h3>
+          </a>
+          <a href="menu.html" class="nav-menu-link">
+            <h3 class="nav-menu-text">MENU</h3>
+          </a>
+          <a href="community.html" class="nav-menu-link">
+            <h3 class="nav-menu-text">COMMUNITY</h3>
+          </a>
+          <a href="greatones.html" class="nav-menu-link">
+            <h3 class="nav-menu-text">GREATONES</h3>
+          </a>
         </div>
         <div class="nav-sns">
           <div class="nav-ico-box">
@@ -59,7 +75,7 @@
           </div>
         </div>
 
-        <!-- 테블릿, 모바일용 nav 오프캔버스-->
+        <!-- 테블릿, 모바일용 nav 오프캔버스 -->
         <div class="nav-offcanvas">
           <button
             class="btn btn-primary"
@@ -89,9 +105,18 @@
             </div>
             <div class="offcanvas-body">
               <div class="nav-offcanvas-container">
-                <p class="nav-offcanvas-menu">ABOUT</p>
-                <p class="nav-offcanvas-menu">MENU</p>
-                <p class="nav-offcanvas-menu">COMMUNITY</p>
+                <a href="about.html" class="nav-menu-link">
+                  <p class="nav-offcanvas-menu">ABOUT</p>
+                </a>
+                <a href="menu.html" class="nav-menu-link">
+                  <p class="nav-offcanvas-menu">MENU</p>
+                </a>
+                <a href="community.html" class="nav-menu-link">
+                  <p class="nav-offcanvas-menu">COMMUNITY</p>
+                </a>
+                <a href="greatones.html" class="nav-menu-link">
+                  <p class="nav-offcanvas-menu">GREATONES</p>
+                </a>
               </div>
             </div>
           </div>
