Chore: 프로필 수정

--- a/greatones.html
+++ b/greatones.html
@@ -134,17 +134,17 @@
           </div>
         </div>
         <div class="greatones">
-          <img src="src/bonobono.jpg" alt="오너" />
+          <img src="src/jjaney-profile.jpg" alt="오너" />
           <h2>장해명</h2>
           <div class="greatones-text-box">
-            <p>직위: Project Owner</p>
-            <p>취미: 코딩알려주는 누나 유투브 감상</p>
+            <p>직위: Developer</p>
+            <p>취미: 베이킹, 넷플릭스, 자전거 타기, 코딩 ..?</p>
             <div class="greatones-introduce">
               <p>소개:</p>
               <p>
-                나보다 더 바보는 본적이 없다. 밥은 먹고 다니냐? 왜 굳이 의미를
-                찾으려 하는가?<br />인생은 욕망이지, 의미가 아니다. 가는 곳마다
-                나보다 한 발 먼저 다녀간 시인이 있음을 발견한다.
+                새로운 것을 배우는 걸 좋아하며, 좋은 사용자 경험을 제공하는
+                프론트 개발자가 되고 싶습니다.<br />
+                2주 간의 코알누 스터디 정말 즐거웠습니다 🧡
               </p>
             </div>
           </div>
