--- a/greatones.html
+++ b/greatones.html
@@ -182,14 +182,17 @@
           </div>
         </div>
         <div class="greatones">
-          <img src="src/bonobono.jpg" alt="오너" />
+          <img src="src/bonobono.jpg" alt="매우 훌륭한 철학자" />
           <h2>한승완</h2>
           <div class="greatones-text-box">
-            <p>직위: 알바</p>
+            <p>직위: 매우 훌륭한 철학자</p>
             <p>취미: 밥먹고 되새김질</p>
             <div class="greatones-introduce">
               <p>소개:</p>
               <p>
+                나보다 더 바보는 본적이 없다. 밥은 먹고 다니냐? 왜 굳이 의미를
+                찾으려 하는가?<br />인생은 욕망이지, 의미가 아니다. 가는 곳마다
+                나보다 한 발 먼저 다녀간 시인이 있음을 발견한다.
                 나보다 더 바보는 본적이 없다. 밥은 먹고 다니냐? 왜 굳이 의미를
                 찾으려 하는가?<br />인생은 욕망이지, 의미가 아니다. 가는 곳마다
                 나보다 한 발 먼저 다녀간 시인이 있음을 발견한다.
