--- a/menu-top.html
+++ b/menu-top.html
@@ -34,7 +34,7 @@
     <div
       class="menutop-subvisual"
       style="
-        background-image: url(https://www.hiocoffee.com/sub/img/ll_menu.png);
+        background-image: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepik.com%2Ffree-photos-vectors%2Fhome-caf%2F3&psig=AOvVaw2mnfayzeKNzMmvJmCNWqAl&ust=1717990783431000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCPDmw8zMzYYDFQAAAAAdAAAAABAJ);
       "
     >
       <div class="menutop-inner">
